# lisp-interpreter

./: README.md  entry_points.cfg  setup.cfg
.github/workflows/: ci.yml
examples/: recursive_fibonacci.scm
lisp_interpreter/: colors.py  exceptions.py  lis.py  main.py  mylis.py  typing.py
tests/: examples_test.py
