[metadata]
name = lisp-interpreter
author = Victor Wildner
description = A basic lisp interpreter
long_description = file: README.md
long_description_content_type = text/markdown

[options]
entry_points = file:entry_points.cfg
install_requires =

setup_requires = setuptools_scm
python_requires = >=3.10
include_package_data = True
packages = find:

[options.extras_require]
dev =
    black
    pytest
		dialogue-tester==1.0b5
[black]
max-line-length = 79
